--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "footballstat",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://betomex.github.io/football_stat/",
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@emotion/react": "^11.4.1",
@@ -37,7 +38,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -56,5 +59,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
